objects/MLG_Record__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Mask_s__c</fullName>
        <label>Additional Mask(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Product_Code__c</fullName>
        <formula>Product_Name__r.ProductCode</formula>
        <label>Bundle Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_MLGPLUS__c</fullName>
        <label>CPQ MLGPLUS</label>
        <referenceTo>CPQ_MLGPLUS__c</referenceTo>
        <relationshipLabel>MLG Records</relationshipLabel>
        <relationshipName>MLG_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Voltage_V__c</fullName>
        <description>Core voltage</description>
        <label>Core Voltage (V)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_List__c</fullName>
        <label>Device List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEOL_BEOL__c</fullName>
        <label>FEOL/ BEOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FEOL</fullName>
                </value>
                <value>
                    <fullName>BEOL</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Description__c</fullName>
        <label>Feature Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Group__c</fullName>
        <description>Groups of MLG data</description>
        <label>Feature Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IO_Voltage_V__c</fullName>
        <description>IO Voltage</description>
        <label>IO Voltage (V)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Metal_Stack__c</fullName>
        <label>IP Metal Stack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Number__c</fullName>
        <label>IP Number</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <label>IP Type</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Vendor__c</fullName>
        <label>IP Vendor</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Delete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Delete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LifeCycle__c</fullName>
        <label>LifeCycle</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLG_External_ID__c</fullName>
        <description>For IP ONLY , the format is PT Number + &apos;_&apos; + IP Number</description>
        <externalId>true</externalId>
        <label>MLG+ External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Attribute_Rule_ID__c</fullName>
        <label>Parent Attribute Rule ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MLG Records</relationshipLabel>
        <relationshipName>MLG_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MLG Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Is_Delete_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MLG-{00000000}</displayFormat>
        <label>MLG Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MLG Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>